Changes in quota-tools from 3.16 to 3.17
* fixed format strings to use "%llu" and "%lld" instead of "%Lu" and "%Ld" (Ladislav Michnovic)
* removed ssl, resolv, lber from the list of LDAP libraries since we don't need them directly (Jan Kara)
* added limits.h include to quota_nld (Jan Kara)

Changes in quota-tools from 3.15 to 3.16
* added information message about journaled quota to quotacheck (Jan Kara, Alex Tomas)
* added pointers to quota_nld and warnquota to some manpages (Jan Kara)
* ported quota_nld to libnl-1.1 (Jan Kara)
* let setquota batch mode accept comments and blank lines, add -c option (Jacky Bruno, Jan Kara)
* print more verbose list of compile options when --version specified (Jan Kara)
* quotaon(8) should work only on local filesystems (Ladislav Michnovic)
* made possible to use quota rpc in mixed NFSv3 and NFSv4 environments (Jan Kara) 
* fixed compilation with openLDAP library versions 2.1 and 2.2 (Jan Kara)
* always define allow_severity and deny_severity for older versions of libwrap (Martin Jacobs)
* cleaned up host_access() handling (Jan Kara)
* configure script now correctly reports checking of libwrap (Jan Kara)
* added MPFS to the list of supported filesystems (Dave Boone)
* all binaries are now stripped during installation (Jan Kara)
* updated Polish translations (Jakub Bogusz)
* fixed typo in a quotaon message (Jakub Bogusz)
* fixed warnquota to check URI only if LDAP enabled (Michael Meskes)

Changes in quota-tools from 3.14 to 3.15
* added a wrapper script around setquota which also updates LDAP (Stefan Adams)
* implemented quota netlink daemon to listen to kernel netlink messages and send them
  to DBUS and / or write them to the console (Jan Kara)
* modified configure scripts and warnquota to check for new LDAP library and allow use of URI (Jan Kara)
* fix LDAP scripts to set VISUAL instead of EDITOR (Michael Meskes)
* added ext4 filesystem to the list of supported filesystems (Jan Kara)