@@ -1,4 +1,6 @@
 Changes in quota-tools from 3.16 to 3.17
+* some typos fixes (Matthew Boyle)
+* fixed possible segfault when unpriviledged user run edquota (Matthew Boyle)
 * fixed format strings to use "%llu" and "%lld" instead of "%Lu" and "%Ld" (Ladislav Michnovic)
 * removed ssl, resolv, lber from the list of LDAP libraries since we don't need them directly (Jan Kara)
 * added limits.h include to quota_nld (Jan Kara)
